--- a/Collection.html
+++ b/Collection.html
@@ -19,7 +19,7 @@
                 <span></span>
             </button>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="Index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Sale is LIVE</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">New Trending</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">New Arrivals</a></li>
@@ -122,4 +122,5 @@
         </div>
     </footer>
 </body>
+
 </html>
