--- a/Cart.html
+++ b/Cart.html
@@ -14,10 +14,10 @@
        <a class="index" href="Index.html"> <h1>trendBaaZ</h1> </a>
       </div>
       <ul class="nav-menu">
-        <li class="nav-item"><a href="Index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="Index.html#sale" class="nav-link">Sale is LIVE</a></li>
-                <li class="nav-item"><a href="Index.html#trending" class="nav-link">New Trending</a></li>
-                <li class="nav-item"><a href="Index.html#new-arrivals" class="nav-link">New Arrivals</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="index.html#sale" class="nav-link">Sale is LIVE</a></li>
+                <li class="nav-item"><a href="index.html#trending" class="nav-link">New Trending</a></li>
+                <li class="nav-item"><a href="index.html#new-arrivals" class="nav-link">New Arrivals</a></li>
                 <li class="nav-item"><a href="Collection.html" class="nav-link">Collections</a></li>
       </ul>
       <div class="nav-right">
@@ -127,4 +127,5 @@
 
   <script src="Cart.js"></script>
 </body>
+
 </html>
