--- a/Product.html
+++ b/Product.html
@@ -14,10 +14,10 @@
       </div>
       <nav>
         <ul class="nav-menu">
-          <li class="nav-item"><a href="Index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="Index.html#sale" class="nav-link">Sale is LIVE</a></li>
-                <li class="nav-item"><a href="Index.html#trending" class="nav-link">New Trending</a></li>
-                <li class="nav-item"><a href="Index.html#new-arrivals" class="nav-link">New Arrivals</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="index.html#sale" class="nav-link">Sale is LIVE</a></li>
+                <li class="nav-item"><a href="index.html#trending" class="nav-link">New Trending</a></li>
+                <li class="nav-item"><a href="index.html#new-arrivals" class="nav-link">New Arrivals</a></li>
                 <li class="nav-item"><a href="Collection.html" class="nav-link">Collections</a></li>
         </ul>
       </nav>
@@ -220,4 +220,5 @@
   </footer>
   <script src="Product.js"></script>
 </body>
+
 </html>
