--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <span></span>
       </button>
       <ul class="nav-menu">
-        <li class="nav-item"><a href="Index.html" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="#sale" class="nav-link">Sale is LIVE</a></li>
         <li class="nav-item"><a href="#trending" class="nav-link">New Trending</a></li>
         <li class="nav-item"><a href="#new-arrivals" class="nav-link">New Arrivals</a></li>
@@ -1072,4 +1072,5 @@
 
   <script src="Index.js"></script>
 </body>
+
 </html>
